add email message handler
